Fixed display of aspects on IE6.  Refs #1143
Former-commit-id: 7d2c7a9ff1e5ee5680f2bae7ecb1ba8e86281a7f

--- a/intermine/webapp/main/resources/webapp/webapp.css
+++ b/intermine/webapp/main/resources/webapp/webapp.css
@@ -702,6 +702,7 @@ td.aspectIconCell {
 .aspectIntro {
   padding: 5px;
   font-size: larger;
+  position:relative
 }
 
 .aspectTitle {
